fixed broken css

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ nav {
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+}
 
 section {
   margin: 0 auto;
@@ -34,3 +34,14 @@ h3 {
   height: 100px;
   margin 10px 0;
   width: 100%;
+}
+
+.colorize {
+  background-color: pink:
+}
+.colorize {
+  background-color:purple:
+}
+.colorize {
+  background-color: red:
+}
